kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages-deployment
  labels: 
    app: messages
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messages
  template:
    metadata:
      labels:
        app: messages
    spec:
      containers:
      - name: messages
        image: api-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
