kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messages-service
spec:
  type: NodePort
  selector:
    app: messages
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
